Fixed summary text display on mobile

--- a/src/components/Summary/Summary.scss
+++ b/src/components/Summary/Summary.scss
@@ -105,9 +105,9 @@
     }
 
     .text {
-      height: 1000px;
+      // height: 1000px;
       padding: 0 5%;
-      font-size: 0.575em;
+      font-size: 0.525em;
     }
   }
 }
